--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-
+        #content {
+            width: fit-content;
+        }
     </style>
 
     <!-- ReactJS -->
@@ -438,7 +440,7 @@
             return (
                 <React.Fragment>
                     {/* Konten halaman yang sedang aktif */}
-                    <div className="m-3 p-2 container card">
+                    <div className="m-3 p-2 container card" id="content">
                         {activePage === "home" && <Pages.Home showPage={showPage} />}
                         {activePage === "cek-kedinasan-sekolah" && <Pages.CekKedinasanSekolah showPage={showPage} />}
                         {activePage === "tebak-karakter-buta-warna" && <Pages.TebakKarakterButaWarna showPage={showPage} />}
