--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
             const options = [
                 ["SMA", "SMA"],
-                ["SMK TEKNIK INFORMATIKA/KOMPUTER", "SMK TEKNIK INFORMATIKA/KOMPUTER"]
+                ["SMK TEKNIK INFORMATIKA/KOMPUTER", "SMK TEKNIK INFORMATIKA/KOMPUTER"],
                 ["ANU", "ANU"]
             ]
 
