--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <div className="input-group mb-3">
                     <select className="form-select" id={"inputGroupSelect" + id} onChange={onChange}>
                         <option >Pilih</option>
-                        {options.map(data => (
-                            <option value={data[0]} key={randomID()}>{data[1]}</option>
+                        {options.map((data, index) => (
+                            <option value={data[0]} key={index}>{data[1]}</option>
                         ))}
                     </select>
                     <label className="input-group-text" htmlFor={"inputGroupSelect" + id}>{props.label}</label>
